# axum-web-api

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
sql/dev_initial/: 01.-create-schema.sql  02-dev-seed.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
src/utils/: app_errors.rs  envs.rs  jwt.rs  mod.rs
src/web/: create_task.rs  custom_json_extactor.rs  delete_task.rs  get_tasks.rs  guard.rs  middleware_custom_header.rs  middleware_message.rs  mirror_body_json.rs  mirror_body_strings.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  partial_update_task.rs  path_variable.rs  query_params.rs  return_json.rs  routes_hello.rs  routes_static.rs  set_middleware_custom_header.rs  update_task.rs  users.rs  validate_data.rs
