[package]
name = "axum_web_api"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow" # For experimental dev.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# -- Web
axum = {version = "0.7", features = ["macros"]}
axum-extra = { version = "0.9.2", features = ["typed-header"] }
headers = "0.4.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }


# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# -- Json
serde = { version = "1.0.196", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
serde_json = "1.0.114"

